# EC2InstanceAMIDate

./: TODO  pyproject.toml  response.json
main/: main.py
test/: test_data.py  test_main.py
