[tool.poetry]
name = "ec2instanceamidate"
version = "0.1.0"
description = ""
authors = ["h-cave <harry.cave1996@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.80"
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
